tests/baselines/reference/parserIndexSignature8.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature8.ts(1,13): error TS1023: An index signature parameter type must be 'string' or 'number'.
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature8.ts(2,14): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature8.ts (2 errors) ====
    var foo: { [index: any]; }; // expect an error here
                ~~~~~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    var foo2: { [index: RegExp]; }; // expect an error here
                 ~~~~~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    